Tests/ShouldFail/try8.adl
CONTEXT Test

PATTERN Test8
r :: A*C.
RULE r |- r~;r
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is a simply incorrect with |- and ;
   Result: FAIL
   Reason: type error on ;
   Error message:

   The pattern named "Test8" contains errors:
   line 5:6, file "try8.adl":
       Relation  r  is declared as r[A*C],
       but its source, A, is in conflict with C.
   
   line 5:13, file "try8.adl":
       Inside term   r~;r,
       the type between the target of  r~  and the source of  r  is undefined.
-}